--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
-    <title>Hello from Electron renderer!</title>
+    <title>Passport Scanner</title>
     <link href="./index.css" rel="stylesheet" />
   </head>
   <body>
